Default private key

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ inventory = hosts
 host_key_checking = false
  
 remote_user=ubuntu
-private_key_file=~/.ssh/id_rsa.decrypt
+private_key_file=~/.ssh/id_rsa
